--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <div id="login-modal" />
+    <div id="register-modal" />
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
