add out portal for alert components in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     <div id="login-modal" />
     <div id="register-modal" />
+    <div id="alert" />
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
